--- a/client/src/pages/AboutPage/components/HistorySection/HistorySection.css
+++ b/client/src/pages/AboutPage/components/HistorySection/HistorySection.css
@@ -15,7 +15,7 @@
 	overflow: hidden;
 }
 
-.history-image-container img {
+.history-image {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -32,7 +32,7 @@
 		height: 250px;
 	}
 
-	.history-text {
+	.history-text-container {
 		width: 60%;
 	}
 }
