--- a/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardLeft/HomeEventCardLeft.css
+++ b/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardLeft/HomeEventCardLeft.css
@@ -15,12 +15,13 @@
 
 .home-event-image-container-left {
 	width: 100%;
-	height: 100%;
+	height: 300px;
 }
 
 @media screen and (min-width: 768px) {
 	.home-event-image-container-left {
 		width: 40%;
+		height: 100%;
 	}
 }
 
