--- a/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardRight/HomeEventCardRight.css
+++ b/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardRight/HomeEventCardRight.css
@@ -16,12 +16,13 @@
 
 .home-event-image-container-right {
 	width: 100%;
-	height: 100%;
+	height: 300px;
 }
 
 @media screen and (min-width: 768px) {
 	.home-event-image-container-right {
 		width: 40%;
+		height: 100%;
 	}
 }
 
