--- a/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardLeft/HomeEventCardLeft.css
+++ b/client/src/pages/HomePage/components/HomeEventsSection/components/HomeEventCardLeft/HomeEventCardLeft.css
@@ -49,7 +49,7 @@
 }
 
 .home-event-title-left {
-	color: var(--black);
+	color: var(--white);
 	text-decoration: none;
 	transition: 0.5s all ease-in-out;
 }
