--- a/client/src/pages/HomePage/components/HomeNewsSection/HomeNewsSection.css
+++ b/client/src/pages/HomePage/components/HomeNewsSection/HomeNewsSection.css
@@ -2,6 +2,16 @@
 	height: 100%;
 }
 
-.home-news-section{
- background-color: var(--green10);
+.home-news-section {
+	background-color: var(--green10);
+}
+
+.home-news-title {
+	margin-top: 10px;
+	color: var(--green07);
+}
+
+.home-news-line {
+	background-color: var(--green07);
+	width: 95%;
 }
