--- a/client/src/pages/AboutPage/AboutPage.css
+++ b/client/src/pages/AboutPage/AboutPage.css
@@ -1,15 +1,16 @@
 .about-page {
-	margin: 20px;
+	padding: 20px 0;
+	background-color: var(--green16);
 }
 
 @media screen and (min-width: 768px) {
 	.about-page {
-		margin: 40px 20px;
+		padding: 40px 0;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.about-page {
-		margin: 40px auto;
+		padding: 40px auto;
 	}
 }
