visit us section colours and padding implemented

--- a/client/src/pages/ContactUsPage/components/VisitUsSection/VisitUsSection.css
+++ b/client/src/pages/ContactUsPage/components/VisitUsSection/VisitUsSection.css
@@ -1,7 +1,8 @@
 .visit-us-section {
-	/* placeholder for future adjustment */
+	padding: 20px 70px 70px 70px;
+	background: var(--green08);
+	color: var(--yellow-logo);
 }
-
 .visit-us-section > h2 {
 	text-align: center;
 }
