--- a/client/src/pages/ContentPage/ContentPage.css
+++ b/client/src/pages/ContentPage/ContentPage.css
@@ -1,33 +1,46 @@
 .content-page {
-	margin: 20px;
+	padding: 20px;
 	position: relative;
+	background-color: var(--green16);
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+}
+
+.content-page-line {
+	background-color: var(--green08);
+	width: 80%;
 }
 
 /* container children: image, category/tags/data, content */
 .content-page-subcontainer {
 	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
+	padding: 0 20px;
+	display: grid;
+	grid-template-rows: repeat(5, auto);
+	grid-template-columns: repeat(2, auto);
+	grid-template-areas:
+		"image image"
+		"tag ."
+		"category ."
+		"date ."
+		"content content";
+	gap: 10px;
 	align-items: center;
-	gap: 20px;
+	justify-content: center;
 }
 
 .content-page-image-container {
-	width: 280px;
+	width: 100%;
+	grid-area: image;
+	align-self: flex-start;
+	margin: 0 auto;
 }
 
 .content-page-image {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	border-radius: 10px;
-}
-
-.content-page-category-tags-date-container {
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
 }
 
 .content-page-category-tags-date-container span {
@@ -36,52 +49,64 @@
 
 .content-page-category {
 	padding: 0.2rem 0.5rem;
-	border-radius: 25px;
-	background-color: var(--gray80);
+	background-color: var(--green17);
+	color: white;
+	grid-area: category;
 }
 
 .content-page-tags-container {
 	display: flex;
 	gap: 4px;
 	padding: 0.2rem 0.5rem;
-	border-radius: 25px;
-	background-color: var(--gray70);
-}
-
-.content-page-tag {
-	/* placeholder */
+	background-color: var(--green17);
+	color: white;
+	grid-area: tag;
 }
 
 .content-page-date {
 	padding: 0.2rem 0.5rem;
-	border-radius: 25px;
-	background-color: var(--gray90);
+	background-color: var(--green17);
+	color: white;
+	grid-area: date;
 }
 
 .content-page-content-container {
 	display: flex;
 	flex-direction: column;
 	gap: 15px;
+	grid-area: content;
 }
 
 @media screen and (min-width: 480px) {
-	.content-page-image-container {
-		width: 400px;
+	.content-page-subcontainer {
+		grid-template-rows: repeat(4, auto);
+		grid-template-columns: repeat(2, auto);
+		grid-template-areas:
+			"image image"
+			"tag ."
+			"category date "
+			"content content";
 	}
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 870px) {
 	.content-page {
-		margin: 40px 20px;
+		padding: 40px 20px;
 	}
 
 	.content-page-subcontainer {
-		width: 80%;
+		grid-template-rows: repeat(2, auto);
+		grid-template-columns: repeat(4, 1fr);
+		grid-template-areas:
+			"category date . tag"
+			"content content image image";
+		gap: 30px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.content-page {
-		margin: 40px auto;
+		margin: 0 auto;
+		padding: 40px 0;
 	}
 }
