--- a/client/src/pages/ContactUsPage/ContactUsPage.css
+++ b/client/src/pages/ContactUsPage/ContactUsPage.css
@@ -1,5 +1,6 @@
 .contact-us-page {
 	background-color: var(--green18);
+	padding-top: 20px;
 }
 
 @media screen and (min-width: 768px) {
@@ -10,6 +11,6 @@
 
 @media screen and (min-width: 1200px) {
 	.contact-us-page {
-		margin: 40px auto;
+		margin: auto;
 	}
 }
