--- a/client/src/pages/ContentPage/ContentPage.css
+++ b/client/src/pages/ContentPage/ContentPage.css
@@ -4,12 +4,15 @@
 	background-color: var(--green16);
 	display: flex;
 	flex-direction: column;
-	gap: 15px;
 }
 
 .content-page-line {
 	background-color: var(--green08);
 	width: 80%;
+}
+
+.content-page h1 {
+	margin-top: 15px;
 }
 
 /* container children: image, category/tags/data, content */
@@ -86,6 +89,10 @@
 			"tag ."
 			"category date "
 			"content content";
+	}
+
+	.content-page h1 {
+		margin-top: 0;
 	}
 }
 
