--- a/client/src/pages/ContactUsPage/components/VisitUsSection/VisitUsSection.css
+++ b/client/src/pages/ContactUsPage/components/VisitUsSection/VisitUsSection.css
@@ -6,6 +6,10 @@
 .visit-us-section > h2 {
 	text-align: center;
 }
+.visit-us-line {
+	background-color: var(--yellow-logo);
+	width: 50%;
+}
 
 .visit-us-container {
 	display: grid;
