--- a/client/src/pages/GalleryPage/GalleryPage.css
+++ b/client/src/pages/GalleryPage/GalleryPage.css
@@ -1,9 +1,16 @@
 .gallery-page {
-	margin: 20px;
+	background-color: var(--green16);
+	padding: 20px 0;
 }
 
 .gallery-page-title {
 	/* placeholder */
+	color: var(--green07);
+}
+
+.gallery-line {
+	background-color: var(--green07);
+	width: 90%;
 }
 
 .gallery-page-list-container {
@@ -13,14 +20,16 @@
 	justify-content: center;
 }
 
+
 @media screen and (min-width: 768px) {
 	.gallery-page {
-		margin: 40px 20px;
+		padding: 40px 20px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.gallery-page {
-		margin: 40px auto;
+		margin: 0 auto;
+		padding: 40px 0;
 	}
 }
