--- a/client/src/pages/GalleryPage/components/GalleryCard/GalleryCard.css
+++ b/client/src/pages/GalleryPage/components/GalleryCard/GalleryCard.css
@@ -3,30 +3,51 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 10px;
-	padding: 15px;
 	border: 1px solid var(--gray80);
 	border-radius: 15px;
 	text-decoration: none;
 	color: var(--black);
 }
 
-.gallery-card-container:hover {
-	box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-		rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+.gallery-card-container:hover .gallery-card-overlay,
+.gallery-card-container:focus .gallery-card-overlay {
+	opacity: 0;
 }
 
 .gallery-card-title {
 	font-size: 18px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: var(--white);
+	z-index: 3;
 }
 
 .gallery-card-image-container {
 	width: 320px;
 	height: 200px;
+	position: relative;
 }
 
 .gallery-card-image {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	border-radius: 15px;
+}
+
+.gallery-card-overlay {
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	opacity: 1;
+	transition: 0.5s ease;
+	background: rgba(25, 59, 5, 0.6);
 	border-radius: 15px;
 }
