--- a/client/src/pages/ContactUsPage/components/ContactUsForm/ContactUsForm.css
+++ b/client/src/pages/ContactUsPage/components/ContactUsForm/ContactUsForm.css
@@ -67,6 +67,10 @@
 .contact-us-form-submit-result {
 }
 
+.contact-us-form-submit.disabled {
+	background-color: var(--gray05);
+}
+
 @media screen and (min-width: 768px) {
 	.contact-us-form-container {
 		margin: 0 auto;
