--- a/client/src/pages/NotFoundPage/NotFoundPage.css
+++ b/client/src/pages/NotFoundPage/NotFoundPage.css
@@ -1,23 +1,42 @@
 .not-found-page {
-	margin: 20px;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: hsl(0, 100%, 92%);
 }
 
-.page-not-found-title {
-	/* placeholder */
+.not-found-page-title {
+	color: red;
 }
 
-.page-not-found-message {
+.not-found-page-line {
+	background-color: red;
+}
+
+.not-found-page- {
+	background-color: red;
+}
+
+.not-found-page-message {
 	text-align: center;
+}
+
+.not-found-page-link {
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	color: inherit;
 }
 
 @media screen and (min-width: 768px) {
 	.not-found-page {
-		margin: 40px 20px;
+		padding: 40px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.not-found-page {
-		margin: 40px auto;
+		margin: 0 auto;
 	}
 }
