--- a/client/src/pages/GalleryPage/GalleryPage.css
+++ b/client/src/pages/GalleryPage/GalleryPage.css
@@ -8,7 +8,7 @@
 	color: var(--green07);
 }
 
-.gallery-line {
+.gallery-page-line {
 	background-color: var(--green07);
 	width: 90%;
 }
@@ -19,7 +19,6 @@
 	flex-wrap: wrap;
 	justify-content: center;
 }
-
 
 @media screen and (min-width: 768px) {
 	.gallery-page {
