--- a/client/src/pages/GalleryPage/GalleryPage.css
+++ b/client/src/pages/GalleryPage/GalleryPage.css
@@ -1,6 +1,6 @@
 .gallery-page {
+	padding: 20px;
 	background-color: var(--green16);
-	padding: 20px 0;
 }
 
 .gallery-page-title {
@@ -29,6 +29,5 @@
 @media screen and (min-width: 1200px) {
 	.gallery-page {
 		margin: 0 auto;
-		padding: 40px 0;
 	}
 }
