--- a/client/src/pages/ContactUsPage/ContactUsPage.css
+++ b/client/src/pages/ContactUsPage/ContactUsPage.css
@@ -5,12 +5,12 @@
 
 @media screen and (min-width: 768px) {
 	.contact-us-page {
-		margin: 40px 20px;
+		padding-top: 40px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.contact-us-page {
-		margin: auto;
+		/* placeholder */
 	}
 }
