--- a/client/src/pages/ErrorPage/ErrorPage.css
+++ b/client/src/pages/ErrorPage/ErrorPage.css
@@ -28,12 +28,12 @@
 
 @media screen and (min-width: 768px) {
 	.error-page {
-		padding: 40px;
+		padding: 40px 20px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.error-page {
-		margin: 0 auto;
+		/* placeholder */
 	}
 }
