--- a/client/src/pages/GetInvolvedPage/GetInvolvedPage.css
+++ b/client/src/pages/GetInvolvedPage/GetInvolvedPage.css
@@ -1,15 +1,15 @@
 .get-involved-page {
-	margin: 20px;
+	padding: 20px;
 }
 
 @media screen and (min-width: 768px) {
 	.get-involved-page {
-		margin: 40px 20px;
+		padding: 40px 20px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.get-involved-page {
-		margin: 40px auto;
+		/* placeholder */
 	}
 }
