--- a/client/src/pages/HomePage/components/HomeEventsSection/HomeEventsSection.css
+++ b/client/src/pages/HomePage/components/HomeEventsSection/HomeEventsSection.css
@@ -1,6 +1,6 @@
 .home-events-section {
 	background-color: var(--green04);
-	padding: 0.5rem 0;
+	padding: 20px 0 10px 0;
 }
 
 .home-events-title {
@@ -16,7 +16,7 @@
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	gap: 1rem;
+	gap: 10px;
 	padding: 1rem 0 1rem 0;
 }
 
@@ -27,10 +27,10 @@
 @media screen and (min-width: 768px) {
 	.home-events-container {
 		flex-direction: row;
-		margin-bottom: 1rem;
 		gap: 0;
 		padding: 0;
 	}
+
 	.home-events-container > :nth-child(n + 3) {
 		display: flex;
 	}
