--- a/client/src/pages/HomePage/components/HomeServicesSection/HomeServicesSection.css
+++ b/client/src/pages/HomePage/components/HomeServicesSection/HomeServicesSection.css
@@ -1,4 +1,5 @@
 .home-services-section {
+	padding-top: 20px;
 	/* background-color: var(--green16); */
 	background-image: linear-gradient(
 		45deg,
@@ -11,7 +12,6 @@
 }
 
 .home-services-title {
-	margin-top: 20px;
 	text-align: center;
 	color: var(--green17);
 }
@@ -33,8 +33,8 @@
 	justify-content: center;
 	row-gap: 20px;
 	column-gap: 20px;
-	margin-top: 30px;
-	margin-bottom: 40px;
+	padding-top: 30px;
+	padding-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
