--- a/client/src/pages/LoadingPage/LoadingPage.css
+++ b/client/src/pages/LoadingPage/LoadingPage.css
@@ -20,12 +20,12 @@
 
 @media screen and (min-width: 768px) {
 	.loading-page {
-		padding: 40px;
+		padding: 40px 20px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.loading-page {
-		margin: 0 auto;
+		/* placeholder */
 	}
 }
