--- a/client/src/pages/ServicesPage/ServicesPage.css
+++ b/client/src/pages/ServicesPage/ServicesPage.css
@@ -1,7 +1,5 @@
 .services-page {
-	margin: 20px;
-	display: flex;
-	flex-direction: column;
+	padding: 20px;
 }
 
 .services-page-title {
@@ -10,12 +8,12 @@
 
 @media screen and (min-width: 768px) {
 	.services-page {
-		margin: 40px 20px;
+		padding: 40px 20px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.services-page {
-		margin: 40px auto;
+		/* placeholder */
 	}
 }
