--- a/client/src/pages/HomePage/components/HomeHero/HomeHero.css
+++ b/client/src/pages/HomePage/components/HomeHero/HomeHero.css
@@ -19,12 +19,11 @@
 
 .slide-image-container {
 	height: 350px;
-	/* max-width: 1200px; */
 }
 
 .slick-list {
-	height: 350px;
-	max-width: 800px;
+	height: 100%;
+	width: 1200px;
 }
 
 /* arrows */
