--- a/client/src/pages/HomePage/components/HomeHero/HomeHero.css
+++ b/client/src/pages/HomePage/components/HomeHero/HomeHero.css
@@ -22,8 +22,7 @@
 }
 
 .slick-list {
-	height: 100%;
-	width: 1200px;
+	width: 100vw;
 }
 
 /* arrows */
@@ -81,5 +80,11 @@
 @media screen and (min-width: 1024px) {
 	.slide-title {
 		font-size: 40px;
+	}
+}
+
+@media screen and (min-width: 1200px) {
+	.slick-list {
+		width: 1200px;
 	}
 }
