--- a/client/src/pages/GalleryAlbumPage/GalleryAlbumPage.css
+++ b/client/src/pages/GalleryAlbumPage/GalleryAlbumPage.css
@@ -3,6 +3,15 @@
 	background-color: var(--green16);
 }
 
+.gallery-title {
+	color: var(--green07);
+}
+
+.gallery-page-line {
+	background-color: var(--green07);
+	width: 90%;
+}
+
 .gallery-album-title {
 	text-align: center;
 	margin-bottom: 10px;
@@ -18,6 +27,16 @@
 	text-decoration: none;
 	color: var(--black);
 	font-weight: 600;
+	padding: 5px;
+	transition: all ease-in-out 250ms;
+	background-color: var(--green17);
+	color: white;
+	font-weight: 800;
+	font-size: 12px;
+}
+.gallery-album-link-back:hover {
+	background-color: var(--yellow-logo);
+	color: var(--green07);
 }
 
 .gallery-album-list {
@@ -40,8 +59,14 @@
 
 .gallery-container-gallery {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); /* Use auto-fit and minmax to create responsive grid */
-	grid-template-rows: repeat(2, 1fr); /* Use fr units for responsive row height */
+	grid-template-columns: repeat(
+		auto-fit,
+		minmax(240px, 1fr)
+	); /* Use auto-fit and minmax to create responsive grid */
+	grid-template-rows: repeat(
+		2,
+		1fr
+	); /* Use fr units for responsive row height */
 	gap: 12px;
 }
 
