get involved section css

--- a/client/src/pages/GetInvolvedPage/components/GetInvolvedSection/GetInvolvedSection.css
+++ b/client/src/pages/GetInvolvedPage/components/GetInvolvedSection/GetInvolvedSection.css
@@ -1,5 +1,6 @@
 .get-involved-section {
 	margin-bottom: 30px; /* to offset from the next section */
+	padding: 30px 20px;
 }
 
 .get-involved-title {
