--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -62,10 +62,11 @@ header nav ul {
 	font-weight: 600;
 	transition: all ease-in-out 200ms;
 	color: var(--white);
+	filter: drop-shadow(0px 0px 2px hsl(0, 0%, 0%));
 }
 
 .navigation-link:hover {
-	color: var(--white);
+	color: var(--yellow-logo);
 }
 
 .navigation-link.active {
@@ -84,6 +85,7 @@ header nav ul {
 	background: transparent;
 	color: var(--white);
 	cursor: pointer;
+	filter: drop-shadow(0px 0px 2px hsl(0, 0%, 0%));
 }
 
 .navigation-menu-button:hover {
@@ -130,9 +132,14 @@ header nav ul {
 	text-decoration: none;
 }
 
-.header-logo-container h2 {
+.header-logo-title {
 	font-size: 16px;
 	color: var(--white);
+	filter: drop-shadow(0px 0px 2px hsl(0, 0%, 0%));
+}
+
+.header-logo-title:hover {
+	color: var(--yellow-logo);
 }
 
 .header-logo-image-container {
@@ -140,10 +147,15 @@ header nav ul {
 	height: 40px;
 }
 
-.header-logo-image-container img {
+.header-logo-image {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	filter: drop-shadow(0px 0px 2px hsl(0, 0%, 0%));
+}
+
+.header-logo-image:hover {
+	filter: drop-shadow(0px -5px 5px hsl(56, 83%, 49%));
 }
 
 @media only screen and (min-width: 960px) {
@@ -189,7 +201,7 @@ header nav ul {
 		font-size: 18px;
 	}
 
-	.header-logo-container h2 {
+	.header-logo-title {
 		font-size: 20px;
 	}
 }
