--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -19,8 +19,8 @@
 	--gray90: hsl(0, 0%, 90%);
 	--white: hsl(0, 0%, 100%);
 
-	--yellow-logo: hsl(59deg 89% 50%);
-	--green-logo: hsl(130deg 60% 37%);
+	--yellow-logo: hsl(59, 89%, 50%); /* #f1ed0e */
+	--green-logo: hsl(130, 60%, 37%); /* #269739 */
 
 	--green01: #0c4d13;
 	--green02: #24711a;
@@ -40,6 +40,8 @@
 	--green16: #e9ffe7;
 	--green17: #316a29;
 	--green18: #e9ffe6;
+	--green19: #f3ffe0;
+	--green20: #39692d;
 
 	--image-glass: rgba(30, 172, 39, 0.3);
 }
@@ -146,27 +148,5 @@ span {
 @media screen and (min-width: 768px) {
 	span {
 		font-size: 16px;
-	}
-}
-
-/* Custom Classes */
-
-/* This is the loading icon animation that displays inside the Submit Button when a Form is being Submitted */
-.form-submit-loading-icon {
-	/* It is hardcoded in size, could should convert this to be more dynamic */
-	width: 19px;
-	height: 19px;
-	border: 4px solid hsl(0, 0%, 95%);
-	border-top: 4px solid hsl(0, 0%, 75%);
-	border-radius: 50%;
-	animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(360deg);
 	}
 }
