--- a/client/src/pages/LoadingPage/LoadingPage.css
+++ b/client/src/pages/LoadingPage/LoadingPage.css
@@ -1,21 +1,27 @@
 .loading-page {
 	padding: 20px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: hsl(84, 100%, 94%);
+	background-color: var(--green16);
 }
 
 .loading-page-title {
-	color: hsl(84, 100%, 25%);
+	color: var(--green17);
 }
 
 .loading-page-line {
-	background-color: hsl(84, 100%, 25%);
+	/* background-color: hsl(84, 100%, 25%); */
+	background-image: linear-gradient(
+		90deg,
+		hsl(113, 40%, 75%) 0%,
+		hsl(111, 26%, 67%) 25%,
+		hsl(111, 27%, 41%) 50%,
+		hsl(111, 26%, 67%) 75%,
+		hsl(113, 40%, 75%) 100%
+	);
 }
 
-.loading-page-message {
-	text-align: center;
+.loading-page-subcontainer {
+	display: flex;
+	justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
