--- a/client/src/pages/NotFoundPage/NotFoundPage.css
+++ b/client/src/pages/NotFoundPage/NotFoundPage.css
@@ -1,25 +1,34 @@
 .not-found-page {
 	padding: 20px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: hsl(0, 100%, 92%);
+	background-color: hsl(0, 100%, 95%);
 }
 
 .not-found-page-title {
-	color: red;
+	color: hsl(0, 100%, 30%);
 }
 
 .not-found-page-line {
-	background-color: red;
+	width: 90%;
+	background-image: linear-gradient(
+		45deg,
+		hsl(0deg 90% 80%) 0%,
+		hsl(0deg 90% 50%) 25%,
+		hsl(0deg 90% 30%) 50%,
+		hsl(0deg 90% 50%) 75%,
+		hsl(0deg 90% 80%) 100%
+	);
 }
 
-.not-found-page- {
-	background-color: red;
+.not-found-page-subcontainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px;
 }
 
 .not-found-page-message {
 	text-align: center;
+	font-weight: 500;
 }
 
 .not-found-page-link {
@@ -27,6 +36,7 @@
 	text-align: center;
 	text-decoration: none;
 	color: inherit;
+	font-weight: 600;
 }
 
 @media screen and (min-width: 768px) {
